# Campus_Trading_System

./: .gitignore  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPLETION_SUMMARY.md  CURRENT_STATUS.md  EXPANSION_PLAN.md  FEATURES.md  FRONTEND_FEATURES.md  IMPLEMENTATION_REPORT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README.md.backup  SYSTEM_FEATURES.md  SYSTEM_OVERVIEW.md  TEST_REPORT.md  TODO_OPTIMIZATION.md  TRANSACTION_FLOW.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  campuswap.db-shm  campuswap.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  test_main.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20251116_0001_initial.py
backend/apps/: __init__.py
backend/apps/ai_service/: __init__.py  main.py  router.py
backend/apps/api_gateway/: main.py  (+2 more)
backend/docs/: 4-DATABASE-SYNC.md  SYNC_AND_TRANSACTION_COMPLETE.md  TRANSACTION_SUMMARY.md  transaction-management.md
backend/sql/: DATABASE_SCHEMA.md  DATABASE_TABLES_SUMMARY.md  README.md  SQL_GUIDE.md  add_cart_table.sql  add_missing_tables_mariadb.sql  add_missing_tables_postgres.sql  add_missing_tables_sqlite.sql  generate_large_dataset.py  mariadb_complete_inserts.sql  mariadb_complete_schema.sql  mariadb_schema.sql  mysql_complete_inserts.sql  mysql_complete_schema.sql  mysql_schema.sql  postgres_complete_inserts.sql  postgres_complete_schema.sql  postgres_schema.sql  sqlite_complete_inserts.sql  sqlite_complete_schema.sql  sqlite_schema.sql
backend/tests/: test_health.py  test_sync_payloads.py
(+127 files in other folders)
